# Rockets

./: .travis.yml  CMakeLists.txt  README.md
CMake/: RocketsConfig.cmake
apps/: CMakeLists.txt  server.cpp
doc/: Doxyfile
python/: Makefile  README.md  requirements.txt  requirements_dev.txt  requirements_rtd.txt  setup.cfg  setup.py
python/doc/source/: api.rst  conf.py  examples.rst  index.rst
python/rockets/: __init__.py  async_client.py  client.py  notification.py  request.py  request_error.py  request_progress.py  request_task.py  sync_client.py  utils.py  version.py  websockets_client.py
python/tests/: test_batch_request.py  test_connect.py  test_import.py  test_notebook.py  test_notify.py  test_observable.py  test_request.py  test_request_id.py  test_rockets.py  test_rx.py
rockets/: CMakeLists.txt  jsonRpc.cpp  jsonRpc.h  server.cpp  serverContext.cpp  serverContext.h
rockets/include/rockets/: types.h
rockets/include/rockets/jsonrpc/: http.h
rockets/jsoncpp/: jsoncpp.cpp
rockets/jsoncpp/json/: json-forwards.h  json.h
rockets/jsonrpc/: asyncReceiver.cpp  asyncReceiver.h  client.cpp  client.cpp.autosave  client.h  emitter.cpp  emitter.h  receiver.cpp  receiver.h  requestProcessor.cpp  requestProcessor.h  requester.cpp  requester.h  server.cpp  server.h  types.h  utils.h
rockets/src/: clientContext.h  serverContext.h  serviceThreadPool.h
rockets/src/http/: channel.h  connection.h  connectionHandler.cpp  connectionHandler.h  registry.h  requestHandler.h
rockets/src/jsonrpc/: cancellableReceiverImpl.h  notifier.cpp
rockets/src/ws/: client.cpp
rockets/ws/: connection.cpp  connection.h  messageHandler.cpp  types.h
scripts/: build_lib.sh  codecov.sh  install_requirements.sh
tests/: CMakeLists.txt  asyncJsonRpc.cpp  http.cpp  jsonRpc.cpp  jsonRpcAsync.cpp  jsonRpcCancellable.cpp  jsonRpcClient.cpp  json_utils.h  websockets.cpp
